[package]
name = "openlr"
version = "0.4.3"
edition = "2024"
description = "OpenLR Rust implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geopinionated/openlr"
readme = "README.md"
keywords = ["openlr", "routing", "routing-engine"]
categories = ["encoding"]

[dependencies]
approx = "0.5"
base64 = "0.22"
ordered-float = "5.3"
radix-heap = "0.4"
rustc-hash = "2.1"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
geo = "0.32"
geojson = "1.0"
graph = "0.3"
rayon = "=1.10.0" # https://github.com/neo4j-labs/graph/issues/138
rstar = "0.12"
test-log = { version = "0.2", features = ["trace"] }
